feat:added faithful hearts section

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <!-- hero section -->
 
-    <section>
+    <section class="position-relative z-0">
         <div class="heroSection">
             <div class="row container m-auto">
-                <div class="col-2 row m-auto p-0 box">
+                <div class="col-8 col-md-4 col-lg-2 row m-auto p-0 box">
                     <div class="col-12 heroSmallImage border">
                         <img src="./images/hero/ensegiseLife.png" alt="energiseLife">
                     </div>
@@ -27,11 +27,11 @@
                     </div>
                 </div>
 
-                <div class="col-6 jesusImage m-auto">
+                <div class="col-8 col-md-4 col-lg-6 jesusImage m-auto">
                     <img src="./images/hero/jesus.png" alt="jesus">
                 </div>
 
-                <div class="col-2 row m-0 box p-0 gap-3 m-auto">
+                <div class="col-8 col-md-4 col-lg-2 row m-0 box p-0 gap-3 m-auto">
                     <div class="col-12 heroSmallImage border">
                         <img src="./images/hero/viewStory.png" alt="viewStory">
                     </div>
@@ -42,15 +42,54 @@
                 </div>
             </div>
         </div>
-        <div class="row faithMotion">
-            <h3 class="col-4"><span>Faith </span>in Action Love in Motion</h3>
-            <p class="col-4">Long established fact that a reader will be distracted by the readable content of a page when.Long
-                established fact that a reader will be distracted by the readable content.</p>
-            <div class="col-4">
-                <h2>4.8/4</h2>
-                <p>Explore our trust score & customer.</p>
+        <div class="faithMotion container-lg row m-auto bg-light">
+            <div class="donateImage accordion mb-2 col-3 col-sm-2 col-lg-1 mx-auto "><img src="./images/hero/donate.png"
+                    alt="donate" class="w-100 h-100"></div>
+            <div class="row col-12 m-0">
+                <h3 class="col-12 col-md-4 mx-auto heroTitle"><span>Faith </span>in Action Love in Motion</h3>
+                <p class="col-12 col-md-4 mx-auto">Long established fact that a reader will be distracted by the
+                    readable content of a
+                    page when.Long
+                    established fact that a reader will be distracted by the readable content.</p>
+                <div class="col-12 col-md-4 mx-auto heroRating">
+                    <h2>4.8/4</h2>
+                    <p>Explore our trust score & customer.</p>
+                </div>
             </div>
         </div>
+    </section>
+
+    <!-- lord section -->
+    <section>
+
+    </section>
+
+    <!-- faithful hearts -->
+
+    <section class="container my-5">
+        <div class="row m-0 px-md-3">
+            <div class="col-12 col-md-6 mx-auto order-2 order-md-1">
+                <h2 class="faithfulHeading ps-2 mt-4 mt-md-0">
+                    Faithful hearts, compassionate hands
+                </h2>
+                <p class="my-4">A long established fact that a reader will be distracted by the readable content of a page when
+                    looking.</p>
+                <div><img src="./images/faithfulHearts/famousQuote.png" alt="quote"></div>
+                <p class="my-4">“I love you when you bow in your mosque, kneel in your temple, pray in your church. For you and I are
+                    sons of one religion, and it is the spirit”“I love you when you bow in your mosque, kneel in your
+                    temple.</p>
+                <h4><img src="./images/faithfulHearts/quote.png" alt="quote"> Martin Luther</h4>
+            </div>
+            <div class="col-8 col-md-5 col-lg-3 mx-auto order-1 order-md-2">
+                <img src="./images/faithfulHearts/bible.png" alt="bible" class="w-100 h-100 ">
+            </div>
+        </div>
+    </section>
+
+<!-- unleash potential section -->
+
+    <section>
+
     </section>
 
     <section class="footer pb-3 mt-5"> </section>
