feat:added unleash potential section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section class="container my-5">
         <div class="row m-0 px-md-3">
             <div class="col-12 col-md-6 mx-auto order-2 order-md-1">
-                <h2 class="faithfulHeading ps-2 mt-4 mt-md-0">
+                <h2 class="sectionHeading ps-2 mt-4 mt-md-0">
                     Faithful hearts, compassionate hands
                 </h2>
                 <p class="my-4">A long established fact that a reader will be distracted by the readable content of a page when
@@ -88,8 +88,22 @@
 
 <!-- unleash potential section -->
 
-    <section>
-
+    <section class="container my-5">
+        <div class="px-md-3 row">
+            <div class="col-12 col-sm-6 d-flex flex-column gap-3 order-1 order-sm-0">
+                <div class="unleashPotentialChurch">
+                    <img src="./images/unleashPotential/oldChurch.png" alt="oldChurch" class="w-100 h-100">
+                </div>
+                <p>“I love you when you bow in your mosque, kneel in your temple, pray in your church. For you and I are sons of one religion, and it is the spirit”“I love you when you bow in your mosque, kneel in your temple. mosque, kneel in your
+                    “I love you when you bow in your .</p>
+                <button class="btn btn-dark unleashPotentialButton">Read More</button>
+            </div>
+            <div class="col-12 col-sm-6 d-flex flex-column gap-4 order-0 order-sm-1">
+                <h2 class="sectionHeading ps-2">Unleash Your Potential of About Us</h2>
+                <p>A long established fact that a reader will be distracted by the readable content of a page when looking.A long established fact that a reader will be distracted by the readable content of a page when looking.</p>
+                <img src="./images/unleashPotential/glass.png" alt="glass" class="class="w-100 h-100"">
+            </div>
+        </div>
     </section>
 
     <section class="footer pb-3 mt-5"> </section>
