feat:added call price section

--- a/index.html
+++ b/index.html
@@ -60,22 +60,72 @@
     </section>
 
     <!-- lord section -->
-    <section>
-
+    <section class="callPriceSection  my-5">
+        <div class="d-flex flex-column gap-5">
+            <div class="row">
+                <div class="churchWomanImages col-12 col-lg-6 d-flex flex-column flex-sm-row gap-2 gap-xl-4">
+                    <div class="ms-sm-auto "><img class="w-100" src="./images/callPrice/church.png"
+                            alt="church">
+                    </div>
+                    <div class="me-sm-auto "><img class="w-100" src="./images/callPrice/ladies.png" alt="woman">
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 d-flex flex-column gap-3 gap-lg-5">
+                    <h2>We Call Price The Lord</h2>
+                    <p>A long established fact that a reader will be distracted by the readable content of a page when
+                        looking.
+                    </p>
+                    <div class="d-flex flex-column gap-5">
+                        <div class="row">
+                            <div class="col-12 col-sm-3"><img src="./images/callPrice/placeOfHeaven.png"
+                                    alt="church small"></div>
+                            <div class="col-12 col-sm-9 d-flex flex-column ">
+                                <h4>Place Of Heaven Church In Earth</h4>
+                                <p>Ab is a long established fact that a reader will be distracted.</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-sm-3"><img src="./images/callPrice/volunteer.png" alt="book">
+                            </div>
+                            <div class="col-12 col-sm-9 d-flex flex-column ">
+                                <h4>Place Of Heaven Church In Earth</h4>
+                                <p>Ab is a long established fact that a reader will be distracted.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="callPriceJoinusSection row mx-auto align-items-center ">
+                <div class=" col-12 col-lg-9 d-flex flex-column flex-md-row align-items-md-center">
+                    <div class="callPriceImages d-flex">
+                        <img class="ms-0" src="./images/buildingBridges/youngLady.png" alt="lady">
+                        <img src="./images/buildingBridges/boy.png" alt="boy">
+                        <img src="./images/buildingBridges/oldLady.png" alt="old lady">
+                        <img src="./images/buildingBridges/boyLaughing.png" alt="boy">
+                    </div>
+                    <h4 class="bridgesOfFaith">Building Bridges of faith, reaching Hearts With Love.</h4>
+                </div>
+                <div class="col-12 col-lg-3">
+                    <button class="callPriceButton" role="button">Join us</button>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- faithful hearts -->
 
     <section class="container my-5">
-        <div class="row m-0 px-md-3">
+        <div class="row px-md-3">
             <div class="col-12 col-md-6 mx-auto order-2 order-md-1">
                 <h2 class="sectionHeading ps-2 mt-4 mt-md-0">
                     Faithful hearts, compassionate hands
                 </h2>
-                <p class="my-4">A long established fact that a reader will be distracted by the readable content of a page when
+                <p class="my-4">A long established fact that a reader will be distracted by the readable content of a
+                    page when
                     looking.</p>
                 <div><img src="./images/faithfulHearts/famousQuote.png" alt="quote"></div>
-                <p class="my-4">“I love you when you bow in your mosque, kneel in your temple, pray in your church. For you and I are
+                <p class="my-4">“I love you when you bow in your mosque, kneel in your temple, pray in your church. For
+                    you and I are
                     sons of one religion, and it is the spirit”“I love you when you bow in your mosque, kneel in your
                     temple.</p>
                 <h4><img src="./images/faithfulHearts/quote.png" alt="quote"> Martin Luther</h4>
@@ -86,7 +136,7 @@
         </div>
     </section>
 
-<!-- unleash potential section -->
+    <!-- unleash potential section -->
 
     <section class="container my-5">
         <div class="px-md-3 row">
@@ -94,14 +144,18 @@
                 <div class="unleashPotentialChurch">
                     <img src="./images/unleashPotential/oldChurch.png" alt="oldChurch" class="w-100 h-100">
                 </div>
-                <p>“I love you when you bow in your mosque, kneel in your temple, pray in your church. For you and I are sons of one religion, and it is the spirit”“I love you when you bow in your mosque, kneel in your temple. mosque, kneel in your
+                <p>“I love you when you bow in your mosque, kneel in your temple, pray in your church. For you and I are
+                    sons of one religion, and it is the spirit”“I love you when you bow in your mosque, kneel in your
+                    temple. mosque, kneel in your
                     “I love you when you bow in your .</p>
                 <button class="btn btn-dark unleashPotentialButton">Read More</button>
             </div>
             <div class="col-12 col-sm-6 d-flex flex-column gap-4 order-0 order-sm-1">
                 <h2 class="sectionHeading ps-2">Unleash Your Potential of About Us</h2>
-                <p>A long established fact that a reader will be distracted by the readable content of a page when looking.A long established fact that a reader will be distracted by the readable content of a page when looking.</p>
-                <img src="./images/unleashPotential/glass.png" alt="glass" class="class="w-100 h-100"">
+                <p>A long established fact that a reader will be distracted by the readable content of a page when
+                    looking.A long established fact that a reader will be distracted by the readable content of a page
+                    when looking.</p>
+                <img src="./images/unleashPotential/glass.png" alt="glass" class="class=" w-100 h-100"">
             </div>
         </div>
     </section>
