Feat : mission section created

--- a/index.html
+++ b/index.html
@@ -15,25 +15,32 @@
 
     <!-- hero section -->
 
-    <section class="position-relative z-0">
+    <section class="position-relative z-0 heroSection">
         <div class="heroSection">
             <div class="row container m-auto">
                 <div class="col-8 col-md-4 col-lg-2 row m-auto p-0 box">
-                    <div class="col-12 heroSmallImage border">
-                        <img src="./images/hero/ensegiseLife.png" alt="energiseLife">
+                    <div class="heroSmallImage border">
+                        <div class="col-12">
+                            <img src="./images/hero/ensegiseLife.png" alt="energiseLife" class="w-100 h-100">
+                        </div>
+                        <h4>Energise your life</h4>
+                        <p>Long established fact that</p>
                     </div>
-                    <div class="col-12 heroSmallImage border">
-                        <img src="./images/hero/flower.png" alt="flower">
+                    <div class="heroSmallImage border">
+                        <div class="col-12">
+                            <img src="./images/hero/flower.png" alt="flower" class="w-100 h-100">
+                        </div>
+                        <h4>Faith in Action, Love in Motion</h4>
                     </div>
                 </div>
 
                 <div class="col-8 col-md-4 col-lg-6 jesusImage m-auto">
-                    <img src="./images/hero/jesus.png" alt="jesus">
+                    <img src="./images/hero/jesus.png" alt="jesus" class="w-100 h-100">
                 </div>
 
                 <div class="col-8 col-md-4 col-lg-2 row m-0 box p-0 gap-3 m-auto">
                     <div class="col-12 heroSmallImage border">
-                        <img src="./images/hero/viewStory.png" alt="viewStory">
+                        <img src="./images/hero/viewStory.png" alt="viewStory" class="w-100 h-100">
                     </div>
                     <div class="col-12">
                         <h2>Spirituality souls</h2>
@@ -42,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="faithMotion container-lg row m-auto bg-light">
+        <div class="faithMotion container-lg row m-auto bg-white">
             <div class="donateImage accordion mb-2 col-3 col-sm-2 col-lg-1 mx-auto "><img src="./images/hero/donate.png"
                     alt="donate" class="w-100 h-100"></div>
             <div class="row col-12 m-0">
@@ -59,19 +66,18 @@
         </div>
     </section>
 
-    <!-- lord section -->
-    <section class="callPriceSection  my-5">
+    <!-- call Price section -->
+    <section class="callPriceSection  my-5 pageMargin">
         <div class="d-flex flex-column gap-5">
             <div class="row">
                 <div class="churchWomanImages col-12 col-lg-6 d-flex flex-column flex-sm-row gap-2 gap-xl-4">
-                    <div class="ms-sm-auto "><img class="w-100" src="./images/callPrice/church.png"
-                            alt="church">
+                    <div class="ms-sm-auto "><img class="w-100 h-100" src="./images/callPrice/church.png" alt="church">
                     </div>
-                    <div class="me-sm-auto "><img class="w-100" src="./images/callPrice/ladies.png" alt="woman">
+                    <div class="me-sm-auto "><img class="w-100 h-100" src="./images/callPrice/ladies.png" alt="woman">
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 d-flex flex-column gap-3 gap-lg-5">
-                    <h2>We Call Price The Lord</h2>
+                    <h2 class="sectionHeading ps-2">We Call Price The Lord</h2>
                     <p>A long established fact that a reader will be distracted by the readable content of a page when
                         looking.
                     </p>
@@ -114,8 +120,8 @@
 
     <!-- faithful hearts -->
 
-    <section class="container my-5">
-        <div class="row px-md-3">
+    <section class="my-5 pageMargin">
+        <div class="row">
             <div class="col-12 col-md-6 mx-auto order-2 order-md-1">
                 <h2 class="sectionHeading ps-2 mt-4 mt-md-0">
                     Faithful hearts, compassionate hands
@@ -138,8 +144,8 @@
 
     <!-- unleash potential section -->
 
-    <section class="container my-5">
-        <div class="px-md-3 row">
+    <section class="my-5 pageMargin">
+        <div class="row">
             <div class="col-12 col-sm-6 d-flex flex-column gap-3 order-1 order-sm-0">
                 <div class="unleashPotentialChurch">
                     <img src="./images/unleashPotential/oldChurch.png" alt="oldChurch" class="w-100 h-100">
@@ -156,6 +162,66 @@
                     looking.A long established fact that a reader will be distracted by the readable content of a page
                     when looking.</p>
                 <img src="./images/unleashPotential/glass.png" alt="glass" class="class=" w-100 h-100"">
+            </div>
+        </div>
+    </section>
+
+    <!-- our mission section -->
+
+    <section class="pageMargin mission">
+        <div>
+            <div class="row mx-0 my-5">
+                <h2 class="sectionHeading ps-2 col-12 col-sm-6 my-auto">Your satisfaction is our mission</h2>
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0">A long established fact that a reader will be distracted
+                    by the readable
+                    content of a page when looking.A long established fact that.A long .</p>
+            </div>
+            <div class="d-flex flex-column flex-sm-row overflow-x-scroll missionCardCollection">
+                <div
+                    class="p-5 missionCard d-flex flex-column gap-3 align-items-center d-flex flex-column gap-3 align-items-center">
+                    <div class="cardImage">
+                        <img src="./images/mission/church.svg" alt="church" class="h-100">
+                    </div>
+                    <h4>Our Churches</h4>
+                    <p>A long established fact that a reade.</p>
+                    <div>
+                        <span class="d-none readMore">Read More</span>
+                        <img src="./images/mission/arrow.svg" alt="arrow">
+                    </div>
+                </div>
+                <div class="p-5 missionCard d-flex flex-column gap-3 align-items-center">
+                    <div class="cardImage">
+                        <img src="./images/mission/worship.svg" alt="worship" class="h-100">
+                    </div>
+                    <h4>Our Worship</h4>
+                    <p>A long established fact that a reade.</p>
+                    <div>
+                        <span class="d-none readMore">Read More</span>
+                        <img src="./images/mission/arrow.svg" alt="arrow">
+                    </div>
+                </div>
+                <div class="p-5 missionCard d-flex flex-column gap-3 align-items-center">
+                    <div class="cardImage">
+                        <img src="./images/mission/councelling.svg" alt="counselling" class="h-100">
+                    </div>
+                    <h4>Our Counselling</h4>
+                    <p>A long established fact that a reade.</p>
+                    <div>
+                        <span class="d-none readMore">Read More</span>
+                        <img src="./images/mission/arrow.svg" alt="arrow">
+                    </div>
+                </div>
+                <div class="p-5 missionCard d-flex flex-column gap-3 align-items-center">
+                    <div class="cardImage">
+                        <img src="./images/mission/meet.svg" alt="meet" class="h-100">
+                    </div>
+                    <h4>Our Meet</h4>
+                    <p>A long established fact that a reade.</p>
+                    <div>
+                        <span class="d-none readMore">Read More</span>
+                        <img src="./images/mission/arrow.svg" alt="arrow">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
